--- a/asp_project/asp_project/Views/Shared/_Layout.cshtml
+++ b/asp_project/asp_project/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
          HEADER & NAVIGATION
          ============================================ -->
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container">
                 
                 <!-- Brand Logo -->
